# fast_fridge

./: .gitmodules  CMakeLists.txt  README.md  demo.py  door.py  dummy.py  export_node.py  learning.py  package.xml  plotlib.py  pr2opt_common.py  real_robot_demo.py  sample_from_manifold.py  task.py  utils.py
config/: bagplay.rviz
launch/: demo.launch  rosbag.launch
models/: .gitignore  complecated_fridge.urdf  simple_fridge.urdf  urdf_writer.py
node_script/: can_pose_publisher.py  pose_processor.py
old/: old.py
rosbag/: save_rosbag.sh
