<?xml version="1.0"?>
<package format="2">
  <name>fast_fridge</name>
  <version>0.0.0</version>
  <description>The fast fridge package</description>
  <maintainer email="hiro@todo.todo">hiro</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
